# httpcan

./: .gitignore  Cargo.toml  Dockerfile  LIBRARY_USAGE.md  LICENSE  README.md
.cargo/: config.toml
examples/: basic.rs  client_testing.rs
src/: config.rs  image_base64.json  lib.rs  main.rs  middleware.rs
src/handlers/: anything.rs  auth.rs  cookies.rs  dynamic_data.rs  echo.rs  http_methods.rs  images.rs  mod.rs  openapi.rs  redirects.rs  request_inspection.rs  response_formats.rs  response_inspection.rs  root.rs  sse.rs  status.rs  utils.rs
static/: index.html  openapi.json
tests/: client_testing_tests.rs
