[package]
name = "httpcan"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web-httpauth = "0.8"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
flate2 = "1.0"
brotli = "3.3"
md5 = "0.7"
sha2 = "0.10"
futures-util = "0.3"
actix-files = "0.6"
actix-multipart = "0.6"
mime = "0.3"
env_logger = "0.10"
