[package]
name = "httpcan"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "A simple HTTP Request & Response Service, with httpbin compatibility"
repository = "https://github.com/seedvector/httpcan"
homepage = "https://github.com/seedvector/httpcan"
readme = "README.md"
keywords = ["http", "testing", "development", "httpbin", "api"]
categories = ["development-tools", "web-programming"]
exclude = [
    "target/",
    ".git/",
    ".gitignore",
    "Dockerfile",
    ".DS_Store",
    "._*",
    "**/*.rs.bk",
    "*.pdb",
    "*.icloud",
]

[lib]
name = "httpcan"
path = "src/lib.rs"

[[bin]]
name = "httpcan"
path = "src/main.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "client_testing"
path = "examples/client_testing.rs"
required-features = ["examples"]

[dependencies]
actix-web = "4.11"
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web-httpauth = "0.8"
base64 = "0.21"
uuid = { version = "1.18", features = ["v4", "serde"] }
rand = "0.8"
flate2 = "1.1"
brotli = "3.3"
md5 = "0.7"
sha2 = "0.10"
futures-util = "0.3"
actix-files = "0.6"
actix-multipart = "0.6"
actix-cors = "0.7"
mime = "0.3"
env_logger = "0.10"
log = "0.4"
url = "2.5"
clap = { version = "4.0", features = ["derive"] }
indexmap = { version = "2.0", features = ["serde"] }
tokio-stream = "0.1"
chrono = { version = "0.4", features = ["serde"] }
async-stream = "0.3"
jsonwebtoken = "9.3"
urlencoding = "2.1"

# Optional dependencies for examples
reqwest = { version = "0.11", optional = true }

[features]
default = []
examples = ["reqwest"]
